# crowds

./: .gitignore  Cargo.toml  Makefile  README.md  config.ts  eslint.config.mjs  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: gh-pages.yml
src/: Player.ts  civ.rs  creature.rs  creatures.rs  game.rs  index.css  index.ts  lib.rs  pathfinding.rs  tiles.rs  util.rs
src/assets/font/: pixel.fnt
src/assets/lang/: en.json
src/creature/: mod.rs  test_dummy.rs
src/engine/: CreatureManager.ts  CreatureRenderer.ts  Engine.ts  MapObject.ts  MapRenderer.ts  Multiplayer.ts  engine.css
src/entities/: Boss.ts  CommonPlayer.ts  ISyncedEntity.ts  NetworkPlayer.ts  Player.ts  TestDummy.ts
src/scenes/: Arena.ts  Boot.ts  MainMenu.ts  World.ts  animatedTiles.ts  tileSubstitution.ts
src/schema/: Arena.ts  messages.ts  rooms.ts
src/server/: ArenaRoom.ts  index.ts
