[package]
name = "backend"
version = "0.1.0"
edition = "2024" 

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
dyn-clone = "1.0.20"
getrandom = { version = "0.4.2", features = ["wasm_js"] }
noise = "0.9.0"
rand = "0.10.0"
wasm-bindgen = "0.2.114"

[profile.release]
lto = true
